--- a/oia translate.html
+++ b/oia translate.html
@@ -89,7 +89,7 @@
 </head>
 <body>
 
-  <a class="logo" href="index.html">🍪 TheCookie.net</a>
+  <a class="logo" href="https://edo1811.github.io/TheCookie.net/">🍪 TheCookie.net</a>
 
   <h1>OIA Cat Translator</h1>
   <p>Type any word or sentence and get the Official Internationally Approved 🐱 cat version. Meow?</p>
