--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <a href="https://edo1811.github.io/SuImT.net/" class="button">ShutUpImTalking.net</a>
       <a href="#" class="button">Toss Your Phone</a>
       <a href="#" class="button">Advertising</a>
-      <a href="programs\oia translate.html" class="button">OIA cat language translator</a>
+      <a href="oia translate.html" class="button">OIA cat language translator</a>
     </div>
   </main>
 
