--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 
     <div class="button-grid">
       <a href="https://edo1811.github.io/SuImT.net/" class="button">ShutUpImTalking.net</a>
-      <a href="#" class="button">Toss Your Phone</a>
-      <a href="#" class="button">Advertising</a>
       <a href="oia translate.html" class="button">OIA cat language translator</a>
+      <a href="#" class="button">This button is empty</a>
+      <a href="hacker.html" class="button">Hacker Console</a>
     </div>
   </main>
 
@@ -134,7 +134,6 @@
     </div>
     <div>Made by GEA innovation studios</div>
   </footer>
-
 
 </body>
 </html>
