--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <a href="https://edo1811.github.io/SuImT.net/" class="button">ShutUpImTalking.net</a>
       <a href="oia translate.html" class="button">OIA cat language translator</a>
       <a href="#" class="button">This button is empty</a>
-      <a href="hacker.html" class="button">Hacker Console</a>
+      <a href="fakehackertype.html" class="button">Hacker Console</a>
     </div>
   </main>
 
